# openMVG

src/: CMakeLists.txt
src/openMVG/features/: CMakeLists.txt  feature.cpp  feature.hpp  svg_features.hpp
src/openMVG/geometry/: Similarity3.hpp  Similarity3_Kernel.hpp  convex_hull.hpp  frustum.hpp  half_space_intersection.hpp  pose3.hpp
src/openMVG/image/: image_container.hpp  image_drawing.hpp  image_io.hpp
src/openMVG/linearProgramming/: linearProgrammingInterface.hpp  linearProgrammingOSI_X.hpp
src/openMVG/matching/: indMatch.hpp  matcher_brute_force.hpp  matcher_cascade_hashing.hpp  matcher_kdtree_flann.hpp  matching_interface.hpp  regions_matcher.hpp  svg_matches.hpp
src/openMVG/matching/kvld/: CMakeLists.txt  kvld.h
src/openMVG/matching_image_collection/: CMakeLists.txt
src/openMVG/multiview/: CMakeLists.txt  conditioning.hpp  essential.hpp  motion_from_essential.hpp  projection.hpp  rotation_averaging_l1.hpp  rotation_averaging_l2.hpp  solver_essential_eight_point.hpp  solver_essential_kernel.hpp  solver_fundamental_kernel.hpp  solver_homography_kernel.hpp  solver_resection_kernel.hpp  solver_resection_p3p_ke.hpp  solver_resection_p3p_kneip.hpp  translation_averaging_common.hpp  translation_averaging_solver.hpp  triangulation.hpp  triangulation_nview.hpp
src/openMVG/numeric/: nullspace.hpp  numeric.h
src/openMVG/sfm/: CMakeLists.txt  sfm_data_BA_ceres.hpp  sfm_data_io.hpp
src/openMVG/system/: timer.hpp
src/openMVG_Samples/features_affine_demo/: features_affine_demo.cpp
src/openMVG_Samples/multiview_robust_essential_ba/: CMakeLists.txt
(+13 files in other folders)
